{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 14,
  "lineage": "a67a1d46-3e3b-4eb6-5a6c-9d6985111460",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198989792983:internet-gateway/igw-0d80580337bda3adf",
            "id": "igw-0d80580337bda3adf",
            "owner_id": "198989792983",
            "tags": {
              "Name": "incentknow-internet-gateway"
            },
            "vpc_id": "vpc-0d118c83428f9aeb1"
          },
          "dependencies": [
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e43f622615de2428",
            "owner_id": "198989792983",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d80580337bda3adf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d118c83428f9aeb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "incentknow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198989792983:security-group/sg-0944fd577c641e0b9",
            "description": "Access in incentknow-vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0944fd577c641e0b9",
            "ingress": [],
            "name": "incentknow-sg",
            "name_prefix": "",
            "owner_id": "198989792983",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0d118c83428f9aeb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198989792983:subnet/subnet-04decc19bcb104029",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-04decc19bcb104029",
            "map_public_ip_on_launch": true,
            "owner_id": "198989792983",
            "tags": {
              "Name": "incentknow-subnet-1a"
            },
            "vpc_id": "vpc-0d118c83428f9aeb1"
          },
          "dependencies": [
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198989792983:subnet/subnet-0b807e8f5be4aef9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-0b807e8f5be4aef9a",
            "map_public_ip_on_launch": true,
            "owner_id": "198989792983",
            "tags": {
              "Name": "incentknow-subnet-1c"
            },
            "vpc_id": "vpc-0d118c83428f9aeb1"
          },
          "dependencies": [
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198989792983:subnet/subnet-0eb7d37527f04a6a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0eb7d37527f04a6a6",
            "map_public_ip_on_launch": true,
            "owner_id": "198989792983",
            "tags": {
              "Name": "incentknow-subnet-1d"
            },
            "vpc_id": "vpc-0d118c83428f9aeb1"
          },
          "dependencies": [
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "incentknow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198989792983:vpc/vpc-0d118c83428f9aeb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01ba9892c9dbd6226",
            "default_route_table_id": "rtb-0d3bda666636953e0",
            "default_security_group_id": "sg-0b8525aa469690f16",
            "dhcp_options_id": "dopt-dc211abb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d118c83428f9aeb1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d3bda666636953e0",
            "owner_id": "198989792983",
            "tags": {
              "Name": "incentknow-vpc"
            }
          }
        }
      ]
    }
  ]
}